# cpp-ipc

./: .gitignore  CMakeLists.txt  cpp-ipc.sln
demo/chat/: chat.vcxproj  chat.vcxproj.filters  main.cpp
demo/msg_que/: main.cpp  msg_que.vcxproj  msg_que.vcxproj.filters
demo/send_recv/: main.cpp  send_recv.vcxproj  send_recv.vcxproj.filters
include/libipc/: shm.h
src/: CMakeLists.txt  buffer.cpp  ipc.cpp  ipc.vcxproj  ipc.vcxproj.filters  policy.h  pool_alloc.cpp  prod_cons.h  queue.h  shm.cpp  waiter.h
src/circ/: elem_array.h  elem_def.h
src/memory/: alloc.h  resource.h  wrapper.h
src/platform/: platform.c  platform.cpp
src/platform/linux/a0/: atomic.h  ftx.h  mtx.c  mtx.h  time.c  time.h
src/platform/posix/: shm_posix.cpp
src/platform/win/: condition.h  mutex.h  semaphore.h  shm_win.cpp  to_tchar.h
src/sync/: condition.cpp  mutex.cpp  semaphore.cpp  waiter.cpp
src/utility/: id_pool.h  pimpl.h  utility.h
test/: CMakeLists.txt  shm_alloc_test.cc  shm_array_test.cc  shm_handle_for_heap_test.cc  shm_handle_test.cc  shm_hash_map_test.cc  shm_hash_table_m_test.cc  shm_hash_table_test.cc  shm_link_table_test.cc  shm_queue_test.cc  shm_sync_buf_test.cc  test-ipc.vcxproj  test-ipc.vcxproj.filters  test.h  test_ipc.cpp  test_mem.cpp  test_platform.cpp  test_queue.cpp  test_shm.cpp  test_sync.cpp  test_thread_utility.cpp  test_waiter.cpp  thread_pool.h
